--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "author": "gsj",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^9.1.3",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^1.0.0",
+    "postcss-loader": "^3.0.0",
     "style-loader": "^0.22.1",
     "webpack": "^4.17.0",
     "webpack-cli": "^3.1.0",
