--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack",
-    "server": "webpack-dev-server --open"
+    "server": "webpack-dev-server --open",
+    "build": "cross-env NODE_ENV=production webpack --config ./webpack.production.config.js --progress"
   },
   "author": "gsj",
   "license": "ISC",
@@ -16,7 +17,9 @@
     "babel-plugin-react-transform": "^3.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "^3.2.0",
     "postcss-loader": "^3.0.0",
     "react-transform-hmr": "^1.0.4",
